# SerUt

./: CMakeLists.txt  ChangeLog  Doxyfile  README  README.md  builddist.sh  configure.in
cmake/: SerUtConfig.cmake.in
doc/: Makefile.am  mainpage.h
pkgconfig/: Makefile.am  serut-uninstalled.pc.in  serut.pc.in
sphinxdoc/source/: conf.py
src/: CMakeLists.txt  Makefile.am  dummyserializer.cpp  dummyserializer.h  fileserializer.cpp  fileserializer.h  memoryserializer.cpp  memoryserializer.h  serializationinterface.cpp  serializationinterface.h  serutconfig.h.in  tcpserializer.cpp  tcpserializer.h  vectorserializer.cpp  vectorserializer.h
